--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "node": "12.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "author": "Muhamed Muminovic",
   "license": "ISC",
@@ -18,7 +17,6 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "helmet": "^3.21.2",
@@ -28,5 +26,8 @@
     "node-schedule": "^1.3.2",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
