--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.9.1",
     "node-schedule": "^1.3.2",
-    "nodemon": "^2.0.2"
-  },
-  "devDependencies": {
+    "nodemon": "^2.0.2",
     "dotenv": "^8.2.0"
   }
 }
