--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "helmet": "^3.21.2",
@@ -26,6 +27,6 @@
     "morgan": "^1.9.1",
     "node-schedule": "^1.3.2",
     "nodemon": "^2.0.2",
-    "dotenv": "^8.2.0"
+    "rotating-file-stream": "^2.1.3"
   }
 }
